# page-hunter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  deny.toml
.github/workflows/: ci.yml
examples/: README.md
examples/actix-web/: Cargo.toml  README.md
examples/actix-web/src/: main.rs
examples/actix-web/src/api/: routes.rs
examples/actix-web/src/conf/: conf.rs
examples/actix-web/src/docs/: open_api.rs
examples/actix-web/src/models/: departments.rs  errors.rs  mod.rs  utils.rs
examples/actix-web/src/services/: api_colombia.rs  mod.rs
examples/axum/: Cargo.toml  Makefile  README.md
examples/axum/src/: main.rs
examples/axum/src/api/: mod.rs  router.rs
examples/axum/src/api/routes/: categories.rs  docs.rs  mod.rs  products.rs
examples/axum/src/config/: conf.rs  logconfig.rs  mod.rs
examples/axum/src/db/: handler.rs  mod.rs
examples/axum/src/db/migrations/: 20240530134613_create_schema_inventory.down.sql  20240530134613_create_schema_inventory.up.sql  20240530135613_create_tables_categories_and_products.down.sql  20240530135613_create_tables_categories_and_products.up.sql  20240530141545_populate_inventory.down.sql  20240530141545_populate_inventory.up.sql
examples/axum/src/db/repository/: categories.rs  mod.rs  products.rs
examples/axum/src/docs/: open_api.rs
examples/axum/src/models/: categories.rs  errors.rs  mod.rs  products.rs
page-hunter/: CHANGELOG.md  Cargo.toml
page-hunter/src/: book.rs  errors.rs  lib.rs  page.rs  results.rs
page-hunter/src/models/: errors.rs
page-hunter/src/page_hunter/: errors.rs  mod.rs  models.rs  pagination.rs  records_pagination.rs  sqlx_pagination.rs
page-hunter/src/pagination/: mod.rs  records.rs  sqlx.rs
page-hunter/src/pagination/sqlx/: mod.rs  queries.rs
page-hunter/src/pagination/sqlx/tests/: mod.rs  test_pg.rs
page-hunter/src/pagination/sqlx/tests/pg/migrations/: 20240523000107_create_schema.down.sql  20240523000107_create_schema.up.sql  20240523000349_create_table_users.down.sql  20240523000349_create_table_users.up.sql  20240523002231_populate_users.down.sql  20240523002231_populate_users.up.sql
page-hunter/src/pagination/sqlx/tests/pg/scripts/: revert_migrations.sh  run_db.sh  run_migrations.sh
page-hunter/tests/: test_book.rs  test_book_model.rs  test_errors.rs  test_page.rs  test_page_model.rs  test_pagination.rs  test_records_pagination.rs  test_sqlx_pagination.rs  test_sqlx_postgres_pagination.rs  test_utoipa_features.rs
page-hunter/tests/migrations/mysql/: 20240524012429_create_table_states.down.sql  20240524012429_create_table_states.up.sql  20240524013727_populate_states.down.sql  20240524013727_populate_states.up.sql
page-hunter/tests/migrations/mysql/scripts/: revert_migration.sh  run_db.sh  run_migrations.sh
page-hunter/tests/migrations/postgres/: 20240523000349_create_tables.down.sql  20240523000349_create_tables.up.sql  20240523002231_populate_users.up.sql  20240523002231_populate_users_and_addresses.down.sql  20240523002231_populate_users_and_addresses.up.sql
page-hunter/tests/migrations/postgres/scripts/: revert_migration.sh  run_db.sh  run_migrations.sh
page-hunter/tests/migrations/sqlite/scripts/: revert_migration.sh  run_db.sh  run_migrations.sh
