[package]
name = "page-hunter"
description = "The pagination powerhouse, built with Rust"
version = "0.3.0"
authors = ["Juan Manuel Tamayo <jmtamayog23@gmail.com>"]
edition = "2021"
repository = "https://github.com/jmtamayo/page-hunter"
documentation = "https://docs.rs/page-hunter"
homepage = "https://github.com/jmtamayo/page-hunter"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["pagination", "paginator", "page_model"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"],  optional = true }
utoipa = { version = "4.2.3", optional = true}
sqlx = { version = ">=0.8.2", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
sqlx = { version = "0.8.2", features = ["uuid", "time"] }
tokio = { version = "1.40.0", features =["full"] }
serde_json = { version = "1.0.128" }
uuid = { version = "1.10.0" }
time = { version = "0.3.36" }

[features]
serde = ["dep:serde"]
utoipa = ["dep:utoipa", "serde"]
pg-sqlx = ["dep:sqlx", "sqlx/postgres"]
mysql-sqlx = ["dep:sqlx", "sqlx/mysql"]
sqlite-sqlx = ["dep:sqlx", "sqlx/sqlite"]

[package.metadata.docs.rs]
all-features = true
