[package]
name = "page-hunter"
description = "The pagination powerhouse, built with Rust"
version = "0.4.0"
authors = ["Juan Manuel Tamayo <jmtamayog23@gmail.com>"]
edition = "2021"
repository = "https://github.com/jmtamayo/page-hunter"
documentation = "https://docs.rs/page-hunter"
homepage = "https://github.com/jmtamayo/page-hunter"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["pagination", "paginator", "page_model"]
categories = ["development-tools"]

[dependencies]
serde = { version = ">=1.0.210", features = ["derive"],  optional = true }
utoipa = { version = ">=5.3.0", optional = true}
sqlx = { version = ">=0.8.1", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
tokio ={ version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["uuid", "time", "postgres"] }
serde_json = { version = "1.0.134" }
uuid = { version = "1.11.0" }
time = { version = "0.3.37" }

[features]
serde = ["dep:serde"]
utoipa = ["dep:utoipa", "serde"]
sqlx = ["dep:sqlx"]

[package.metadata.docs.rs]
all-features = true
