[package]
name = "page-hunter"
description = "The pagination powerhouse, built with Rust"
version = "0.5.1"
authors = ["Juan Manuel Tamayo <jmtamayog23@gmail.com>"]
edition = "2021"
repository = "https://github.com/jmtamayo/page-hunter"
documentation = "https://docs.rs/page-hunter"
homepage = "https://github.com/jmtamayo/page-hunter"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["pagination", "paginator", "page_model"]
categories = ["development-tools"]

[dependencies]
serde = { version = ">=1.0.217", features = ["derive"],  optional = true }
utoipa = { version = ">=5.4.0", optional = true}
sqlx = { version = ">=0.8.3", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
tokio ={ version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres"] }
serde_json = { version = "1.0.140" }

[features]
serde = ["dep:serde"]
utoipa = ["dep:utoipa", "serde"]
sqlx = ["dep:sqlx"]

[package.metadata.docs.rs]
all-features = true
