[package]
name = "actix-web-example"
description = "An example of how to use actix-web with page-hunter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = { version = "4.6.0" }
reqwest = { version = "0.12.4", features = ["json"] }
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
utoipa-redoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.1.0", features = ["actix-web"] }
serde ={ version = "1.0.203", features = ["derive"] }
page-hunter = { path = "../../page-hunter", features=["utoipa"] }

[workspace]