[package]
name = "actix-web-example"
description = "An example of how to use actix-web with page-hunter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = { version = "4.9.0" }
reqwest = { version = "0.12.12", features = ["json"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.1.1", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.1", features = ["actix-web"] }
utoipa-rapidoc = { version = "5.0.1", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.1", features = ["actix-web"] }
serde ={ version = "1.0.217", features = ["derive"] }
page-hunter = { path = "../../page-hunter", features=["utoipa"] }

[workspace]