[package]
name = "axum-example"
description = "An example of how to use axum with page-hunter to build a PosgreSQL database manager with SQLx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.7" }
utoipa = {version = "4.2.3", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "time",  "postgres"] }
page-hunter = { path = "../../page-hunter", features=["utoipa", "pg-sqlx"] }
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde"] }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }

[workspace]