[package]
name = "axum-example"
description = "An example of how to use axum with page-hunter to build a PosgreSQL database manager with SQLx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4" }
utoipa = {version = "5.4.0", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "uuid", "time",  "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde"] }
env_logger = { version = "0.11.8" }
log = { version = "0.4.27" }
page-hunter = { path = "../../page-hunter", features=["utoipa", "sqlx"] }

[workspace]